--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -8,18 +8,326 @@
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
+            "cell_type": "markdown",
             "metadata": {},
-            "outputs": [],
             "source": [
-                "# Your code here"
+                "### Paso 1: Carga del conjunto de datos"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 11,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>package_name</th>\n",
+                            "      <th>review</th>\n",
+                            "      <th>polarity</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>com.facebook.katana</td>\n",
+                            "      <td>privacy at least put some option appear offli...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>1</th>\n",
+                            "      <td>com.facebook.katana</td>\n",
+                            "      <td>messenger issues ever since the last update, ...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2</th>\n",
+                            "      <td>com.facebook.katana</td>\n",
+                            "      <td>profile any time my wife or anybody has more ...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>3</th>\n",
+                            "      <td>com.facebook.katana</td>\n",
+                            "      <td>the new features suck for those of us who don...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>4</th>\n",
+                            "      <td>com.facebook.katana</td>\n",
+                            "      <td>forced reload on uploading pic on replying co...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>...</th>\n",
+                            "      <td>...</td>\n",
+                            "      <td>...</td>\n",
+                            "      <td>...</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>886</th>\n",
+                            "      <td>com.rovio.angrybirds</td>\n",
+                            "      <td>loved it i loooooooooooooovvved it because it...</td>\n",
+                            "      <td>1</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>887</th>\n",
+                            "      <td>com.rovio.angrybirds</td>\n",
+                            "      <td>all time legendary game the birthday party le...</td>\n",
+                            "      <td>1</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>888</th>\n",
+                            "      <td>com.rovio.angrybirds</td>\n",
+                            "      <td>ads are way to heavy listen to the bad review...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>889</th>\n",
+                            "      <td>com.rovio.angrybirds</td>\n",
+                            "      <td>fun works perfectly well. ads aren't as annoy...</td>\n",
+                            "      <td>1</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>890</th>\n",
+                            "      <td>com.rovio.angrybirds</td>\n",
+                            "      <td>they're everywhere i see angry birds everywhe...</td>\n",
+                            "      <td>1</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "<p>891 rows × 3 columns</p>\n",
+                            "</div>"
+                        ],
+                        "text/plain": [
+                            "             package_name                                             review  \\\n",
+                            "0     com.facebook.katana   privacy at least put some option appear offli...   \n",
+                            "1     com.facebook.katana   messenger issues ever since the last update, ...   \n",
+                            "2     com.facebook.katana   profile any time my wife or anybody has more ...   \n",
+                            "3     com.facebook.katana   the new features suck for those of us who don...   \n",
+                            "4     com.facebook.katana   forced reload on uploading pic on replying co...   \n",
+                            "..                    ...                                                ...   \n",
+                            "886  com.rovio.angrybirds   loved it i loooooooooooooovvved it because it...   \n",
+                            "887  com.rovio.angrybirds   all time legendary game the birthday party le...   \n",
+                            "888  com.rovio.angrybirds   ads are way to heavy listen to the bad review...   \n",
+                            "889  com.rovio.angrybirds   fun works perfectly well. ads aren't as annoy...   \n",
+                            "890  com.rovio.angrybirds   they're everywhere i see angry birds everywhe...   \n",
+                            "\n",
+                            "     polarity  \n",
+                            "0           0  \n",
+                            "1           0  \n",
+                            "2           0  \n",
+                            "3           0  \n",
+                            "4           0  \n",
+                            "..        ...  \n",
+                            "886         1  \n",
+                            "887         1  \n",
+                            "888         0  \n",
+                            "889         1  \n",
+                            "890         1  \n",
+                            "\n",
+                            "[891 rows x 3 columns]"
+                        ]
+                    },
+                    "execution_count": 11,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "import pandas as pd\n",
+                "\n",
+                "df = pd.read_csv('https://raw.githubusercontent.com/4GeeksAcademy/naive-bayes-project-tutorial/main/playstore_reviews.csv')\n",
+                "df"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### Paso 2: Estudio de variables y su contenido"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 12,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>review</th>\n",
+                            "      <th>polarity</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>privacy at least put some option appear offli...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>1</th>\n",
+                            "      <td>messenger issues ever since the last update, ...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2</th>\n",
+                            "      <td>profile any time my wife or anybody has more ...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>3</th>\n",
+                            "      <td>the new features suck for those of us who don...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>4</th>\n",
+                            "      <td>forced reload on uploading pic on replying co...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ],
+                        "text/plain": [
+                            "                                              review  polarity\n",
+                            "0   privacy at least put some option appear offli...         0\n",
+                            "1   messenger issues ever since the last update, ...         0\n",
+                            "2   profile any time my wife or anybody has more ...         0\n",
+                            "3   the new features suck for those of us who don...         0\n",
+                            "4   forced reload on uploading pic on replying co...         0"
+                        ]
+                    },
+                    "execution_count": 12,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "df = df.drop('package_name', axis = 1)\n",
+                "df.head()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 13,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>review</th>\n",
+                            "      <th>polarity</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>privacy at least put some option appear offlin...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>1</th>\n",
+                            "      <td>messenger issues ever since the last update, i...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2</th>\n",
+                            "      <td>profile any time my wife or anybody has more t...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>3</th>\n",
+                            "      <td>the new features suck for those of us who don'...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>4</th>\n",
+                            "      <td>forced reload on uploading pic on replying com...</td>\n",
+                            "      <td>0</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ],
+                        "text/plain": [
+                            "                                              review  polarity\n",
+                            "0  privacy at least put some option appear offlin...         0\n",
+                            "1  messenger issues ever since the last update, i...         0\n",
+                            "2  profile any time my wife or anybody has more t...         0\n",
+                            "3  the new features suck for those of us who don'...         0\n",
+                            "4  forced reload on uploading pic on replying com...         0"
+                        ]
+                    },
+                    "execution_count": 13,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "df['review'] = df['review'].str.strip().str.lower()\n",
+                "df.head()"
             ]
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3.8.13 64-bit ('3.8.13')",
+            "display_name": "Python 3",
             "language": "python",
             "name": "python3"
         },
@@ -33,14 +341,9 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.13"
+            "version": "3.11.4"
         },
-        "orig_nbformat": 4,
-        "vscode": {
-            "interpreter": {
-                "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
-            }
-        }
+        "orig_nbformat": 4
     },
     "nbformat": 4,
     "nbformat_minor": 2
