--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -16,7 +16,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [
                 {
@@ -147,7 +147,7 @@
                             "[891 rows x 3 columns]"
                         ]
                     },
-                    "execution_count": 11,
+                    "execution_count": 1,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -168,7 +168,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
@@ -235,7 +235,7 @@
                             "4   forced reload on uploading pic on replying co...         0"
                         ]
                     },
-                    "execution_count": 12,
+                    "execution_count": 2,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -254,7 +254,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -321,7 +321,7 @@
                             "4  forced reload on uploading pic on replying com...         0"
                         ]
                     },
-                    "execution_count": 13,
+                    "execution_count": 3,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -340,7 +340,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [
                 {
@@ -369,7 +369,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [
                 {
@@ -384,7 +384,7 @@
                             "       [0, 0, 0, ..., 0, 0, 0]], shape=(712, 3310))"
                         ]
                     },
-                    "execution_count": 17,
+                    "execution_count": 5,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -424,7 +424,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [
                 {
@@ -1175,7 +1175,7 @@
                             "MultinomialNB()"
                         ]
                     },
-                    "execution_count": 19,
+                    "execution_count": 6,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1189,7 +1189,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [
                 {
@@ -1206,7 +1206,7 @@
                             "       0, 0, 0])"
                         ]
                     },
-                    "execution_count": 20,
+                    "execution_count": 7,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1218,7 +1218,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 21,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [
                 {
@@ -1227,7 +1227,7 @@
                             "0.8156424581005587"
                         ]
                     },
-                    "execution_count": 21,
+                    "execution_count": 8,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1247,7 +1247,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [
                 {
@@ -1264,6 +1264,106 @@
                 "    model_auxiliar.fit(X_train,y_train)\n",
                 "    y_pred_auxiliar = model_auxiliar.predict(X_test)\n",
                 "    print(f'{model_auxiliar} con accuracy de: {accuracy_score(y_test,y_pred_auxiliar)}')\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "En este caso vemos que el modelo MultinomialNB es el mejor ya que tiene una efectividad del 81%"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### Paso 4: Optimiza el modelo anterior"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 16,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Mejor score (Accuracy): 0.8159755737220525\n",
+                        "Mejores parámetros: {'alpha': 0.01, 'fit_prior': False}\n"
+                    ]
+                }
+            ],
+            "source": [
+                "from sklearn.model_selection import GridSearchCV\n",
+                "\n",
+                "nb_model = MultinomialNB()\n",
+                "param_grid = {\n",
+                "    'alpha': [0.01,1,10.0,100],\n",
+                "    'fit_prior': [True,False]\n",
+                "}\n",
+                "\n",
+                "grid_nb = GridSearchCV(nb_model, param_grid, cv=5, scoring='accuracy')\n",
+                "grid_nb.fit(X_train, y_train)\n",
+                "\n",
+                "print(f\"Mejor score (Accuracy): {grid_nb.best_score_}\")\n",
+                "print(f\"Mejores parámetros: {grid_nb.best_params_}\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Ahora que encontramos los mejores parametros, vamos a optimizar y re-entrenar el modelo"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 17,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "0.8212290502793296"
+                        ]
+                    },
+                    "execution_count": 17,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "model = MultinomialNB(alpha = 0.01, fit_prior = False)\n",
+                "model.fit(X_train, y_train)\n",
+                "model.fit(X_train, y_train)\n",
+                "y_pred = model.predict(X_test)\n",
+                "accuracy_score(y_test, y_pred)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Hay una mejora de un 1%"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### Paso 5: Guarda el modelo"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 19,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from pickle import dump\n",
+                "\n",
+                "dump(model, open(\"../models/naive_bayes_alpha_0-01_fit_prior_False_42.sav\", \"wb\"))"
             ]
         }
     ],
