--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -1365,6 +1365,49 @@
                 "\n",
                 "dump(model, open(\"../models/naive_bayes_alpha_0-01_fit_prior_False_42.sav\", \"wb\"))"
             ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### Paso 6: Explora otras alternativas"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Regresion Logistica"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 20,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Accuracy Logistic Regression: 0.8324022346368715\n"
+                    ]
+                }
+            ],
+            "source": [
+                "from sklearn.linear_model import LogisticRegression\n",
+                "\n",
+                "lr_model = LogisticRegression()\n",
+                "lr_model.fit(X_train, y_train)\n",
+                "print(f\"Accuracy Logistic Regression: {lr_model.score(X_test, y_test)}\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Elegimos la Regresión Logística como alternativa porque, a diferencia de Naive Bayes (que trata a cada palabra como si fuera totalmente independiente), la Regresión Logística es capaz de ajustar la importancia (pesos) de cada palabra en relación con las demás. Esto la hace mucho más robusta para entender el lenguaje real, donde el significado de una reseña depende de la combinación de sus palabras y no solo de que aparezcan sueltas.\n",
+                "Ademas que la Regresión Logística\tSe utiliza para clasificar sucesos binarios o multiclase (menos común) al igual que Naive Bayes"
+            ]
         }
     ],
     "metadata": {
